# IsolPolicyZygisk

./: README.md
.github/workflows/: build.yml
magisk_module/: action.sh  customize.sh  module.prop  uninstall.sh
magisk_module/webroot/: app.js  index.html  style.css
native/: CMakeLists.txt
native/hooker_java/io/github/mhmrdd/isolationpolicy/hook/: ProcessListHooker.java
native/src/: art_symbol.cpp  art_symbol.h  bind_hook.cpp  bind_hook.h  config_store.cpp  config_store.h  denylist_watcher.cpp  denylist_watcher.h  hooker_dex.h  log.h  main.cpp  zygisk.hpp
